<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>glim_scan_saver_ext</name>
  <version>0.0.0</version>
  <description>A GLIM plugin which exports the (undistorted) lidar scans to the dump directory.</description>
  <maintainer email="jubraun@uos.de">Justus Braun</maintainer>
  <license>MIT</license>

  <depend>glim</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
